# ROS2-Course-Packages

./: .gitignore  assignment.sh
src/assignment_bringup/: CMakeLists.txt  package.xml
src/assignment_bringup/launch/: assignment.launch.py
src/assignment_interfaces/: CMakeLists.txt  package.xml
src/assignment_interfaces/msg/: SpawnLocation.msg
src/assignment_turtle_sim_project/: CMakeLists.txt  package.xml
src/assignment_turtle_sim_project/src/: turtle_control.cpp  turtle_spawn.cpp
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  battery.cpp  battery_level_setter.cpp  hardware_status_publisher.cpp  led_panel.cpp  node_template.cpp  number_counter.cpp  number_publisher.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: battery_life_simulator.py  hardware_status_publisher.py  node_template.py  robot_receiver.py  robot_transmitter.py
src/my_robot_bringup/: package.xml
src/my_robot_bringup/launch/: power_management.launch.py  robot_radio.launch.py
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/my_robot_interfaces/msg/: BatteryStatus.msg  LEDPanelState.msg
src/my_robot_interfaces/srv/: SetLED.srv
